--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-post rounded customer-testi m-1">
                         <div class="position-relative">
-                            <img src="images/blog/1.jpg" class="img-fluid rounded-top" alt="">
+                            <img src="images/atumn.png" class="img-fluid rounded-top" alt="">
                         </div>
                         <div class="content pt-4 pb-4 p-3">
                             <h5  style="text-align: center">Autumn Serenade of Love</h5>
@@ -910,7 +910,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-post rounded customer-testi m-1">
                         <div class="position-relative">
-                            <img src="images/blog/2.jpg" class="img-fluid rounded-top" alt="">
+                            <img src="images/stellar.png" class="img-fluid rounded-top" alt="">
                         </div>
                         <div class="content pt-4 pb-4 p-3">
                             <h5 style="text-align: center">Stellar Reverie</h5>
@@ -943,12 +943,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-post rounded customer-testi m-1">
                         <div class="position-relative">
-                            <img src="images/blog/3.jpg" class="img-fluid rounded-top" alt="">
+                            <img src="images/wind.png" class="img-fluid rounded-top" alt="">
                         </div>
                         <div class="content pt-4 pb-4 p-3">
                             <h5 style="text-align: center">Whispers of the Wind</h5>
                             <audio controls height="100" width="100" style="text-align: center" class="text-light-muted mb-3">
-	 
+                            
                                 <source src="images/whisper1.wav" >
                                 <!-- <source src="images/newsreport.ogg" type="audio/ogg"> -->
                                 
