--- a/index.html
+++ b/index.html
@@ -217,9 +217,7 @@
                         </div>
                         <div class="services-texts">
                             <h3 class="title mb-3">Monitor of the class</h3>
-                            <p class="text-light-muted mb-4">Check attendance. Make the class rules. Organize many activities in school. Timely convey the 
-                                requirements of the school and the head teacher for class activities. Organize students
-                                 to implement the requirements.</p>
+                            <p class="text-light-muted mb-4">Supervised disciplinary issues like attendance; organized class-wide activities like New Year party; conveyed requirements from school administration.</p>
                             <!-- <a href="javascript:void(0)" class="text-primary">Read more <i class="mdi mdi-chevron-right"></i></a> -->
                         </div>
                     </div>
@@ -232,10 +230,8 @@
                         </div>
                         <div class="services-texts">
                             <h3 class="title mb-3">Head of the dormitory</h3>
-                            <p class="text-light-muted mb-4">Supervised the dormitory and ensured a safe and conducive living environment. Enforcd the dormitory rules and regulations. Addressed any concerns or issues brought forth by the residents
-                                .
-                                
-                                
+                            <p class="text-light-muted mb-4">
+                                Supervised dormitory discipline to ensure safety & inclusiveness; enforced regulations; organized bonding activities; addressed residents’ concerns.
                                 </p>
                             <!-- <a href="javascript:void(0)" class="text-primary">Read more <i class="mdi mdi-chevron-right"></i></a> -->
                         </div>
@@ -249,9 +245,7 @@
                         </div>
                         <div class="services-texts">
                             <h3 class="title mb-3">Member in School Volunteer Association</h3>
-                            <p class="text-light-muted mb-4">Volunteered at major student events, such as the Insiders
-                                drama festival coming-of-age ceremony, and mini-marathon. Granted as five-star volunteer
-                                . </p>
+                            <p class="text-light-muted mb-4">Greeted guests, maintained order, cleaned up venues, & carried loads at events like Insiders drama festival, coming-of-age ceremony, & mini-marathon.</p>
                             <!-- <a href="javascript:void(0)" class="text-primary">Read more <i class="mdi mdi-chevron-right"></i></a> -->
                         </div>
                     </div>
