update duty details

--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
                             <i data-feather="disc" class="fea icon-md"></i>
                         </div>
                         <div class="services-texts">
-                            <h3 class="title mb-3">Member in School Volunteer Association</h3>
-                            <p class="text-light-muted mb-4">Greeted guests, maintained order, cleaned up venues, & carried loads at events like Insiders drama festival, coming-of-age ceremony, & mini-marathon.</p>
+                            <h3 class="title mb-3">Member in Volunteer Association</h3>
+                            <p class="text-light-muted mb-4">Greeted guests, maintained order, cleaned up venues, & carried loads at events like Insiders drama festival, coming-of-age ceremony & mini-marathon.</p>
                             <!-- <a href="javascript:void(0)" class="text-primary">Read more <i class="mdi mdi-chevron-right"></i></a> -->
                         </div>
                     </div>
