--- a/index.html
+++ b/index.html
@@ -398,10 +398,10 @@
                             <img src="images/kouyuapp.jpg" class="img-fluid" alt="work-image">
                             <div class="overlay-work bg-dark"></div>
                             <div class="content">
-                                <h5 class="mb-0"><a class="text-white title">An app for practicing spoken English with
+                                <h5 class="mb-0"><a class="text-white title">TALKBRIDGE, an app for practicing spoken English with
                                         generative AI.
                                     </a></h5>
-                                <h6 class="text-light tag mb-0">Screenshot of the app and the code</h6>
+                                <h6 class="text-light tag mb-0">Screenshot of Talkbridge and the code</h6>
                             </div>
                             <div class="icons text-center">
                                 <a href="javascript:void(0)" data-src="images/kouyuapp.jpg" data-gallery="myGal"
@@ -459,15 +459,15 @@
                     <div
                         class="card border-0 work-container work-modern position-relative d-block overflow-hidden rounded">
                         <div class="card-body p-0">
-                            <img src="images/zhijiao.jpeg" class="img-fluid" alt="work-image">
+                            <img src="images/talkbridge.jpg" class="img-fluid" alt="work-image">
                             <div class="overlay-work bg-dark"></div>
                             <div class="content">
-                                <h5 class="mb-0"><a class="text-white title">Teaching in Qionghai, Hainan
+                                <h5 class="mb-0"><a class="text-white title">“Speak Up” with Jinan Sunshine 100 Primary School
                                     </a></h5>
-                                <h6 class="text-light tag mb-0">A picture of me teaching a class </h6>
+                                <h6 class="text-light tag mb-0">A picture of me introducing Talkrbidge to the students </h6>
                             </div>
                             <div class="icons text-center">
-                                <a href="javascript:void(0)" data-src="images/zhijiao.jpeg" data-gallery="myGal"
+                                <a href="javascript:void(0)" data-src="images/talkbridge.jpg" data-gallery="myGal"
                                     class="text-primary work-icon bg-white d-inline-block rounded-pill mfp-image"><i
                                         data-feather="camera" class="fea icon-sm"></i></a>
                             </div>
@@ -479,15 +479,15 @@
                     <div
                         class="card border-0 work-container work-modern position-relative d-block overflow-hidden rounded">
                         <div class="card-body p-0">
-                            <img src="images/yinyue.jpg" class="img-fluid" alt="work-image">
+                            <img src="images/fc.jpg" class="img-fluid" alt="work-image">
                             <div class="overlay-work bg-dark"></div>
                             <div class="content">
                                 <h5 class="mb-0"><a class="text-white title">Performing First Class at Capperland
                                     </a></h5>
-                                <h6 class="text-light tag mb-0">The photo before the show started</h6>
+                                <h6 class="text-light tag mb-0">Photo of me performing “first class”</h6>
                             </div>
                             <div class="icons text-center">
-                                <a href="javascript:void(0)" data-src="images/yinyue.jpg" data-gallery="myGal"
+                                <a href="javascript:void(0)" data-src="images/fc.jpg" data-gallery="myGal"
                                     class="text-primary work-icon bg-white d-inline-block rounded-pill mfp-image"><i
                                         data-feather="camera" class="fea icon-sm"></i></a>
                             </div>
